--- a/index.html
+++ b/index.html
@@ -457,20 +457,20 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item fade-in">
-                    <h3>15+</h3>
+                    <h3>10+</h3>
                     <p>年臨床經驗</p>
                 </div>
                 <div class="stat-item fade-in">
-                    <h3>2000+</h3>
-                    <p>成功手術案例</p>
+                    <h3>100+</h3>
+                    <p>洗腎瘻管手術案例</p>
                 </div>
                 <div class="stat-item fade-in">
-                    <h3>98%</h3>
-                    <p>患者滿意度</p>
+                    <h3>30+</h3>
+                    <p>心臟主動脈手術案例</p>
                 </div>
                 <div class="stat-item fade-in">
-                    <h3>24/7</h3>
-                    <p>急診醫療服務</p>
+                    <h3>24hr</h3>
+                    <p>不間斷醫療服務</p>
                 </div>
             </div>
         </div>
@@ -482,8 +482,7 @@
             <h2 class="section-title fade-in">醫師簡介</h2>
             <div class="doctor-card fade-in">
                 <div class="doctor-image">
-                    醫師專業照片<br>
-                    <small>（請更換為實際照片）</small>
+                    <img src="3E022337-9DDC-4D55-A0A1-FFCB5EFEFAA5_1_105_c.jpeg" alt="吳柏俞醫師專業照片" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                 </div>
                 <div class="doctor-info">
                     <h3>○○○醫師</h3>
