--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <h2 class="section-title fade-in">醫師簡介</h2>
             <div class="doctor-card fade-in">
                 <div class="doctor-image">
-                    <img src="doctor-photo.jpg" alt="吳柏俞醫師專業照片" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                    <img src="images/doctor-photo.jpg" alt="吳柏俞醫師專業照片" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                 </div>
                 <div class="doctor-info">
                     <h3>○○○醫師</h3>
