--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>心臟血管外科專家 - 高雄醫學大學附設醫院</title>
-    <meta name="description" content="高雄醫學大學附設醫院心臟血管外科主治醫師，專精冠狀動脈繞道手術、心臟瓣膜修復、主動脈手術等複雜心臟血管疾病治療。">
+    <title>高雄心臟血管外科 吳柏俞醫師 | 心臟手術 靜脈曲張 洗腎瘻管 主動脈剝離治療</title>
+    <meta name="description" content="高雄心臟血管外科專科醫師吳柏俞，專精心臟手術、靜脈曲張微創治療、洗腎瘻管手術、主動脈剝離急救。高醫附設醫院與小港醫院看診，葉克膜急救經驗豐富。">
+    <meta name="keywords" content="高雄心臟血管外科,吳柏俞醫師,心臟手術,靜脈曲張,洗腎瘻管,主動脈剝離,高雄醫學大學附設醫院,小港醫院,葉克膜,心臟瓣膜手術,冠狀動脈繞道">
+    <meta name="author" content="吳柏俞醫師">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="高雄心臟血管外科 吳柏俞醫師">
+    <meta property="og:description" content="專精心臟手術、靜脈曲張、洗腎瘻管、主動脈剝離治療的心臟血管外科專科醫師">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://W-PY.github.io">
+    <meta name="geo.region" content="TW-KHH">
+    <meta name="geo.placename" content="高雄市">
+    <meta name="geo.position" content="22.6273;120.3014">
+    <meta name="ICBM" content="22.6273, 120.3014">
     <style>
         * {
             margin: 0;
@@ -557,13 +568,86 @@
             opacity: 0.9;
         }
     </style>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Physician",
+        "name": "吳柏俞醫師",
+        "alternateName": "吳柏俞",
+        "description": "高雄心臟血管外科專科醫師，專精心臟手術、靜脈曲張、洗腎瘻管、主動脈剝離治療",
+        "medicalSpecialty": [
+            "心臟血管外科",
+            "心臟手術",
+            "靜脈曲張治療",
+            "洗腎瘻管手術",
+            "主動脈剝離急救"
+        ],
+        "hasCredential": [
+            "心臟血管外科專科醫師",
+            "外科專科醫師",
+            "台灣胸腔暨心臟血管外科醫學會專科醫師"
+        ],
+        "worksFor": [
+            {
+                "@type": "Hospital",
+                "name": "高雄醫學大學附設中和紀念醫院",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "自由一路100號",
+                    "addressLocality": "三民區",
+                    "addressRegion": "高雄市",
+                    "postalCode": "807",
+                    "addressCountry": "TW"
+                }
+            },
+            {
+                "@type": "Hospital", 
+                "name": "高雄小港醫院",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "山明路482號",
+                    "addressLocality": "小港區", 
+                    "addressRegion": "高雄市",
+                    "postalCode": "812",
+                    "addressCountry": "TW"
+                }
+            }
+        ],
+        "areaServed": {
+            "@type": "City",
+            "name": "高雄市"
+        },
+        "availableService": [
+            {
+                "@type": "MedicalProcedure",
+                "name": "心臟手術"
+            },
+            {
+                "@type": "MedicalProcedure", 
+                "name": "靜脈曲張微創治療"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "洗腎瘻管手術"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "主動脈剝離急救"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "葉克膜置放"
+            }
+        ]
+    }
+    </script>
 </head>
 <body>
     <!-- 導航列 -->
     <nav>
         <div class="container">
             <div class="nav-container">
-                <div class="logo">心臟血管外科</div>
+                <div class="logo">吳柏俞醫師 • 心臟血管外科</div>
                 <ul class="nav-links">
                     <li><a href="#home">首頁</a></li>
                     <li><a href="#about">關於醫師</a></li>
@@ -582,8 +666,8 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-subtitle">高雄醫學大學附設醫院 • 高雄小港醫院</div>
-                <h1>心臟血管外科專科醫師</h1>
-                <p>專精於複雜心臟血管疾病治療，擁有豐富的臨床經驗與精湛的手術技巧。為患者提供最專業、最安全的心臟血管外科醫療服務，守護每一顆珍貴的心臟。</p>
+                <h1>高雄心臟血管外科 • 吳柏俞醫師</h1>
+                <p>專精於心臟手術、靜脈曲張微創治療、洗腎瘻管手術及主動脈剝離急救。擁有豐富的臨床經驗與精湛的手術技巧，為高雄地區患者提供最專業、最安全的心臟血管外科醫療服務，守護每一顆珍貴的心臟。</p>
                 <a href="#contact" class="cta-button">預約門診諮詢</a>
             </div>
         </div>
@@ -682,7 +766,7 @@
                         </ul>
                     </div>
 
-                    <p>專精於各類心臟血管疾病的外科治療，包含冠狀動脈繞道手術、心臟瓣膜修復置換、主動脈疾病治療等。秉持著「精準醫療、用心守護」的理念，為每位患者提供最適切的治療方案。</p>
+                    <p>專精於各類心臟血管疾病的外科治療，包含心臟手術、冠狀動脈繞道手術、心臟瓣膜修復置換、主動脈剝離急救治療、洗腎瘻管手術及靜脈曲張微創治療等。在高雄地區提供專業的心臟血管外科醫療服務，秉持著「精準醫療、用心守護」的理念，為每位患者提供最適切的治療方案。</p>
                     
                     <a href="https://www.kmuh.org.tw/Web/WebRegistration/DocIntro/DocDetail?lang=tw&doctorID=1070607&deptDesc=%E5%BF%83%E8%87%9F%E8%A1%80%E7%AE%A1%E5%A4%96%E7%A7%91&dCode=0220" target="_blank" 
                        style="display: inline-block; margin-top: 1.5rem; background: linear-gradient(135deg, #c9302c 0%, #8b1a1a 100%); 
@@ -698,38 +782,38 @@
     <!-- 專業領域 -->
     <section id="specialties">
         <div class="container">
-            <h2 class="section-title fade-in">專業治療領域</h2>
+            <h2 class="section-title fade-in">高雄專業治療領域</h2>
             <div class="specialties-grid">
-                <div class="specialty-card fade-in">
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">🩸</div>
-                    <h3>洗腎瘻管手術</h3>
-                    <p>血液透析瘻管手術、瘻管介入手術、氣球擴張術及支架置放手術，專業處理末期腎病患者血管通路問題。</p>
-                </div>
-                <div class="specialty-card fade-in">
+                    <h3>高雄洗腎瘻管手術</h3>
+                    <p>血液透析瘻管手術、瘻管介入手術、氣球擴張術及支架置放手術，專業處理末期腎病患者血管通路問題。高雄地區經驗豐富。</p>
+                </article>
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">🫀</div>
-                    <h3>冠狀動脈繞道手術</h3>
-                    <p>CABG手術治療嚴重冠心病，採用傳統開胸手術方式，恢復心肌血流供應。</p>
-                </div>
-                <div class="specialty-card fade-in">
+                    <h3>高雄心臟手術</h3>
+                    <p>冠狀動脈繞道手術治療嚴重冠心病，採用傳統開胸手術方式，恢復心肌血流供應。</p>
+                </article>
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">🔧</div>
                     <h3>心臟瓣膜手術</h3>
                     <p>二尖瓣、主動脈瓣修復或置換手術，可評估微創手術，降低手術風險。</p>
-                </div>
-                <div class="specialty-card fade-in">
+                </article>
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">🩺</div>
-                    <h3>主動脈疾病治療</h3>
-                    <p>主動脈瘤、主動脈剝離、主動脈修補術、微創主動脈手術等急重症治療。</p>
-                </div>
-                <div class="specialty-card fade-in">
+                    <h3>高雄主動脈剝離治療</h3>
+                    <p>主動脈瘤、主動脈剝離急救、主動脈修補術、微創主動脈手術等急重症治療。24小時緊急處置。</p>
+                </article>
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">🦵</div>
                     <h3>周邊血管疾病</h3>
                     <p>氣球擴張術及支架置放手術，治療周邊動脈阻塞和血管狹窄問題。</p>
-                </div>
-                <div class="specialty-card fade-in">
+                </article>
+                <article class="specialty-card fade-in">
                     <div class="specialty-icon">💉</div>
-                    <h3>靜脈疾病治療</h3>
-                    <p>靜脈曲張微創手術 - 雷射、微波、硬化劑，專業處理各種靜脈病變，恢復血管健康。</p>
-                </div>
+                    <h3>高雄靜脈曲張微創手術</h3>
+                    <p>靜脈曲張微創手術 - 雷射、微波、硬化劑，專業處理各種靜脉病變，恢復血管健康。高雄靜脈曲張治療首選。</p>
+                </article>
             </div>
         </div>
     </section>
@@ -893,7 +977,7 @@
     <!-- 版權資訊 -->
     <footer style="background: #2c3e50; color: white; text-align: center; padding: 2rem 0;">
         <div class="container">
-            <p>&copy; 2025 心臟血管外科專科醫師 | 高雄醫學大學附設醫院 • 高雄小港醫院</p>
+            <p>&copy; 2025 吳柏俞醫師 • 心臟血管外科專科醫師 | 高雄醫學大學附設醫院 • 高雄小港醫院</p>
             <p style="margin-top: 0.5rem; font-size: 0.9rem; opacity: 0.7;">專業醫療，守護您的心臟健康</p>
         </div>
     </footer>
